# Rashnawa

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  suppress.txt
assets/animations/: button.txt  example.txt  firecamp.txt  halteroman.txt  healthbar.txt  hublot.txt  lights.txt  spaceship_door.txt
assets/audio/: Master.bank  Master.strings.bank
assets/map/zone_0/room_tmp/: entities.txt  room.txt  triggers.txt
assets/menu/: button.json
assets/menu/options/: button.json  button.txt  checkbox.json  titreandspecies.json
assets/sprites/: Sprite haltéroman.json
audio/: AudioManager.cpp  AudioManager.h  EventInstance.cpp  EventInstance.h  Utils.h
fmod_project/project/.cache/: {0c705c9b-8e6e-4b50-a6f8-979448d5653c}.pdc  {19c65d9d-ea10-46bc-9b16-bb38d54074c8}.pdc  {1a521f0b-82b4-46a2-b9aa-fd2b0a001826}.pdc  {1dbe61f1-684f-4e61-9f1f-534669de8211}.pdc  {1f2a2eda-ae82-4983-a1d1-31d2be60116d}.pdc  {269e16ea-ef84-4a3b-bd07-da048e7e2e26}.pdc  {2d59d9d6-e338-4de1-82f3-cd83a54c4b10}.pdc  {3462abfb-197e-45e7-b6e1-5d918addc8b3}.pdc  {36c4f654-bea4-4a00-8268-6adba487cfbb}.pdc  {4307c116-65b7-4d1d-bc21-7167d2b58a12}.pdc  {48b1caba-0ee4-42e1-a5b3-b22f7b24e9df}.pdc  {49d446cb-ec76-4f66-9c87-8656a533bcbe}.pdc  {63ac06da-50b7-4304-aa84-894ff460bc2a}.pdc  {7163dfd6-1cd8-476d-90ef-629dac216e8e}.pdc  {7e9a61b7-356b-4c7e-9494-a8a05aa13629}.pdc  {7faaa320-be9f-41e7-9a5a-b0d998e12f12}.pdc  {94c497a4-6b7b-4e27-aaa7-843861a7d80e}.pdc  {a21ee545-7c79-4548-8bfa-92827506b089}.pdc  {b17d8e01-7e32-4f72-aa45-a1f50442002a}.pdc  {bfddd026-65c2-48e2-80bc-704facf15927}.pdc  {c0c1b0a5-d5ef-4c1a-bc01-cfb3f3c1a3c8}.pdc  {c4110eae-c463-497b-beef-53a8ab14163a}.pdc  {cf6a0c81-3472-4f57-8ecc-87bf73c180ea}.pdc  {d62feff8-7723-4dfe-b97f-4eaf55998593}.pdc  {f0a5f8e2-0eb0-49a6-b246-7bb38edf99e9}.pdc  {f0aabac9-66e6-419a-8692-1281206a4b68}.pdc  {f7553277-1057-45b9-afb4-8e4079fe8c4a}.pdc
fmod_project/project/.user/Metadata/: Mixer.user.xml  Workspace.user.xml
fmod_project/project/Metadata/: Master.xml  Mixer.xml  Tags.xml  Workspace.xml
fmod_project/project/Metadata/Asset/: {72d26050-7938-48a2-9d03-91dab5498705}.xml
fmod_project/project/Metadata/AudioFile/: {0c705c9b-8e6e-4b50-a6f8-979448d5653c}.xml  {19c65d9d-ea10-46bc-9b16-bb38d54074c8}.xml  {2d59d9d6-e338-4de1-82f3-cd83a54c4b10}.xml  {36c4f654-bea4-4a00-8268-6adba487cfbb}.xml  {63ac06da-50b7-4304-aa84-894ff460bc2a}.xml  {7e9a61b7-356b-4c7e-9494-a8a05aa13629}.xml  {7faaa320-be9f-41e7-9a5a-b0d998e12f12}.xml  {94c497a4-6b7b-4e27-aaa7-843861a7d80e}.xml  {a21ee545-7c79-4548-8bfa-92827506b089}.xml  {c0c1b0a5-d5ef-4c1a-bc01-cfb3f3c1a3c8}.xml  {cf6a0c81-3472-4f57-8ecc-87bf73c180ea}.xml  {f7553277-1057-45b9-afb4-8e4079fe8c4a}.xml
fmod_project/project/Metadata/Bank/: {69dfbbef-5b49-4848-b10e-e8f8720b9d84}.xml
fmod_project/project/Metadata/BankFolder/: {66f36754-06cb-4853-914e-102c54bf3582}.xml
fmod_project/project/Metadata/EffectPreset/: {45a81b7f-a4c8-4fed-9ad8-68f64ec437f8}.xml  {867e4194-ef59-4eb3-aefe-95aa08230391}.xml  {fb81b470-cc92-4afb-b840-d3c462a4bea7}.xml
fmod_project/project/Metadata/EffectPresetFolder/: {898e585b-90ff-4b18-b9ac-a5f9767976b8}.xml
fmod_project/project/Metadata/EncodingSetting/: {c5070a72-6d0f-4e76-ab2b-a8b7f6463f14}.xml  {c6c8e30a-8df2-42bb-9396-536d929f7c8a}.xml
fmod_project/project/Metadata/Event/: {880544d1-277b-4dfd-95b1-16ce560a64d6}.xml  {abd536be-09c7-4f52-9207-15a746bbdf3a}.xml
fmod_project/project/Metadata/EventFolder/: {7e51f26e-9771-4efc-a489-257036cb0cf0}.xml
fmod_project/project/Metadata/ParameterPreset/: {107ab105-f861-4440-9151-da802187a332}.xml  {1307b678-aea3-40ee-aa17-22c19d28076c}.xml  {2a8ddfbc-017d-49e9-b542-426b87a6469c}.xml  {30edc11e-cf69-4b9b-ac09-c73b2e798162}.xml  {3656d640-0ff1-447b-ade8-a6b4032d1323}.xml  {3ee81ff3-d923-4e02-9cb0-549122c06f61}.xml  {43a1223f-7240-4d71-9f61-30519549779d}.xml  {a860b1eb-c46e-4d42-b44f-b0726195e891}.xml  {b174ecb5-f063-4414-a09b-1f8571d29f26}.xml  {bee48506-8fe0-48f5-bbc3-5b7a007f946d}.xml  {ca779454-2a87-45c0-8e3f-eca49f9ee606}.xml  {f392015e-fb56-4727-be05-8a48878e67b2}.xml
fmod_project/project/Metadata/ParameterPresetFolder/: {ec786930-289b-4f71-bba6-3f95db01ffce}.xml
fmod_project/project/Metadata/Platform/: {c63b12ae-1043-40c7-9e2c-952c05f71ed3}.xml
fmod_project/project/Metadata/ProfilerFolder/: {386870b0-b9bd-4aad-8e30-8aab91ddbf4e}.xml
src/: Defines.h  Game.cpp  Game.h  MusicManager.cpp  MusicManager.h  main.cpp
src/audio/: AudioManager.cpp  AudioManager.h  EventInstance.cpp  EventInstance.h  MusicManager.cpp  MusicManager.h  Utils.h  Utils.hpp
src/entities/: BlockEntity.cpp  BlockEntity.h  CollideableEntity.cpp  CollideableEntity.h  Entities.h  Entity.cpp  Entity.h  EntityBuilder.cpp  EntityBuilder.h  Hitbox.cpp  Hitbox.h  LivingEntity.cpp  LivingEntity.h  Player.cpp  Player.h  Pnj.h
src/entities/behavior/: EntityBehavior.cpp  EntityBehavior.h  PlayerBehavior.cpp  PlayerBehavior.h
src/entities/data/: EntityData.h
src/entities/items/: Item.h
src/entities/patterns/: Pattern.h
src/entities/weapons/: Weapon.cpp  Weapon.h
src/events/: EventManager.cpp  EventManager.h  Events.h  Events.hpp  KeybindHandler.cpp  KeybindHandler.h  Keybinds.h
src/graphics/: Animations.cpp  Animations.h  Renderer.cpp  Renderer.h
src/screens/: BasicScreen.cpp  BasicScreen.h  MainMenu.cpp  MainMenu.h  MainMenuScreen.cpp  MainMenuScreen.h  OptionsCategories.h  OptionsMenu.cpp  OptionsMenu.h  OptionsMenuScreen.cpp  OptionsMenuScreen.h  PauseMenuScreen.cpp  PauseMenuScreen.h  Screens.h  SoundOptions.cpp  SoundOptions.h
src/screens/objects/: BasicScreen.cpp  BasicScreen.h  Button.cpp  Button.h  ButtonBuilder.cpp  ButtonBuilder.h  FillMode.h  OptionComponent.cpp  OptionComponent.h  OptionsCategory.cpp  OptionsCategory.h  Slider.cpp  Slider.h  TextButton.cpp  TextButton.h
src/storage/: OptionsManager.cpp  OptionsManager.h  OptionsState.cpp  OptionsState.h
src/storage/options/: OptionDataStructs.h  SoundOptions.cpp  SoundOptions.h
src/utils/: StringHasher.h
src/world/: Room.cpp  Room.h  TriggerBox.cpp  TriggerBox.h  World.cpp  World.h
(+30 files in other folders)
